tests/snapshots/snapshot_tests__delivery_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                              * Delivery Status *

┌ [-] All Delivered ───────────────────────────────────────────────────────────┐
  - No sync yet
└──────────────────────────────────────────────────────────────────────────────┘


















[?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
