tests/snapshots/snapshot_tests__devices.snap
---
source: tests/snapshot_tests.rs
assertion_line: 236
expression: output
---
Link Device

────────────────────────────────────────────────────────────────────────────────
                                 [1/4]  ● ○ ○ ○
                                   Link Device

┌ QR Code ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  ┌──────────────┐                                                            │
│  │  ▄▄▄▄  ▄▄▄▄ │                                                             │
│  │  █  █  █  █ │                                                             │
│  │  ▀▀▀▀  ▀▀▀▀ │                                                             │
│  └──────────────┘                                                            │
│                                                                              │
│  [PUBLIC_ID]...                                 │
│  Scan on new device                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                                  [Esc] Cancel

[E] Cancel  [?] help  [␛] back  [q] quit
    Exchange    │   Contacts    │     Home      │  ★ Settings   │     Help
