tests/snapshots/snapshot_tests__duress_enabled.snap
---
source: tests/snapshot_tests.rs
assertion_line: 455
expression: output
---
Duress PIN

────────────────────────────────────────────────────────────────────────────────
                                 [1/4]  ● ○ ○ ○
                                   Duress PIN

┌ [S] Duress PIN ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] What is a Duress PIN?                                                   │
│      A secondary PIN that, when entered, silently alerts your chosen contacts│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Status ──────────────────────────────────────────────────────────────────────┐
│ [ ] Duress PIN enabled                                                       │
└──────────────────────────────────────────────────────────────────────────────┘






                               [Enter] Set Up PIN

[E] Set Up PIN  [␛] back  [q] quit
    Exchange    │   Contacts    │     Home      │  ★ Settings   │     Help
