tests/snapshots/snapshot_tests__duress_not_configured.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Duress PIN

────────────────────────────────────────────────────────────────────────────────
                                 [1/4]  ● ○ ○ ○
                                   Duress PIN

┌ [S] Duress PIN ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] What is a Duress PIN?                                                   │
│      A secondary PIN that, when entered, silently alerts your chosen contacts│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Status ──────────────────────────────────────────────────────────────────────┐
│ [ ] Duress PIN enabled                                                       │
└──────────────────────────────────────────────────────────────────────────────┘






                               [Enter] Set Up PIN

[E] Set Up PIN  [?] help  [␛] back  [q] quit
    Exchange    │    MyInfo     │   Contacts    │  ★ Settings   │     Help
