tests/snapshots/snapshot_tests__edit_field_dialog.snap
---
source: tests/snapshot_tests.rs
assertion_line: 346
expression: output
---
Edit Field

────────────────────────────────────────────────────────────────────────────────
                                   Edit Field

Editing: Mobile

Value
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Enter new value                                                               │
└──────────────────────────────────────────────────────────────────────────────┘









                           [Enter] Save  [Esc] Cancel

[E] Save  [E] Cancel  [?] help  [␛] back  [q] quit
    Exchange    │   Contacts    │    ★ Home     │   Settings    │     Help
