tests/snapshots/snapshot_tests__edit_name_dialog.snap
---
source: tests/snapshot_tests.rs
assertion_line: 361
expression: output
---
                                Edit Display Name

Display Name
┌ ✎ editing ───────────────────────────────────────────────────────────────────┐
│Alice Smith█                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘














                           [Enter] Save  [Esc] Cancel

[EDIT]   [Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
    Exchange    │   ★ MyInfo    │   Contacts    │   Settings    │     Help
