tests/snapshots/snapshot_tests__edit_relay_url_dialog.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                 Edit Relay URL

Relay URL
┌ ✎ editing ───────────────────────────────────────────────────────────────────┐
│wss://relay.vauchi.app█                                                       │
└──────────────────────────────────────────────────────────────────────────────┘














                           [Enter] Save  [Esc] Cancel

[Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
    Exchange    │   ★ MyInfo    │   Contacts    │   Settings    │     Help
