tests/snapshots/snapshot_tests__exchange.snap
---
source: tests/snapshot_tests.rs
assertion_line: 407
expression: output
---
Share Your Code

────────────────────────────────────────────────────────────────────────────────
                                [1/5]  ● ○ ○ ○ ○
                                 Share Your Code

┌ QR Code ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  ┌──────────────┐                                                            │
│  │  ▄▄▄▄  ▄▄▄▄ │                                                             │
│  │  █  █  █  █ │                                                             │
│  │  ▀▀▀▀  ▀▀▀▀ │                                                             │
│  └──────────────┘                                                            │
│                                                                              │
│  [PUBLIC_ID]...                                 │
│  Alice Smith                                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                             [Enter] Scan Their Code

[E] Scan Their Code  [?] help  [␛] back  [q] quit
   ★ Exchange   │   Contacts    │     Home      │   Settings    │     Help
