tests/snapshots/snapshot_tests__group_detail_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                    * Group *


┌ [#] Group Info ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] Members                                                                 │
│      0                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet. Use Exchange to add one.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘











[Enter] Rename  [Enter] Delete Group  [?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
